--- a/tests/test3.html
+++ b/tests/test3.html
@@ -1,6 +1,6 @@
 <html>
 <div>
-<input type="checkbox" onclick="console.log(&quot;hello&quot;);document.getElementById(&quot;switch1&quot;).checked == true ? csoundObj.enableAudioInput():null;" id="switch1" name="switch1" class="switch" />
+<input type="checkbox" onclick="document.getElementById(&quot;switch1&quot;).checked == true ? csoundObj.enableAudioInput():null;" id="switch1" name="switch1" class="switch" />
 <label for="switch1">Enable Audio In </label>
 </div>
 </html>
