--- a/tests/test3.html
+++ b/tests/test3.html
@@ -2,6 +2,8 @@
 <div>
 <input type="checkbox" onclick="document.getElementById(&quot;switch1&quot;).checked == true ? csoundObj.enableAudioInput():null;" id="switch1" name="switch1" class="switch" />
 <label for="switch1">Enable Audio In </label>
-<p>Please Compile csd before enabling Audio In</p>
+<ul>
+<li>Please compile csd before enabling.</li>
+</ul>
 </div>
 </html>
