Added text to test widget sections.

--- a/tests/test2.html
+++ b/tests/test2.html
@@ -3,4 +3,5 @@
 <script>
 document.getElementById('files').addEventListener('change', handleFileSelect, false);
 </script>
+<p>Upload an audio file here.</p>
 </html>
