--- a/tests/test3.html
+++ b/tests/test3.html
@@ -2,8 +2,6 @@
 <div>
 <input type="checkbox" onclick="document.getElementById(&quot;switch1&quot;).checked == true ? csoundObj.enableAudioInput():null;" id="switch1" name="switch1" class="switch" />
 <label for="switch1">Enable Audio In </label>
-<ul>
-<li>Please compile csd before enabling.</li>
-</ul>
 </div>
+<p>Please compile the csd before enabling</p>
 </html>
