--- a/tests/test4.html
+++ b/tests/test4.html
@@ -6,4 +6,5 @@ var slider1Channel = csoundObj.addControlChannel("slider1", 0);
 </script>
 	<input type="range" min="0" max="1000" oninput="csoundObj.setControlChannelValue(slider1Channel, this.value)"/>
 </div>
+<p>Slider controls "slider1" channel, range 0-1000</p>
 </html>
