--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="stylesheets/index.css">
 <script src="javascripts/jquery.js" type="text/javascript"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Code Mirror</title>
+<title>Csound Emscripten</title>
 <script src="javascripts/libcsound.js"></script>
 <script src="javascripts/CsoundObj.js"></script>
 <script src="codemirror/lib/codemirror.js"></script>
