--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 							<div class="btn-group btn-group pull-right">
 								<button type="button" class="btn btn-primary btn-sm" id="CompileButton">Compile</button>
 								<button type="button" class="btn btn-primary btn-sm" id="PerformButton">Perform</button>
+								<button type="button" class="btn btn-primary btn-sm" id="RenderButton">Render</button>
 								<button type="button" class="btn btn-primary btn-sm" id="ResetButton">Reset</button>
 							</div>
 
